--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
 
 h1{
     font-size: 56px;
+    margin-right: 20px;
     margin-bottom: 30px;
     padding-right: 30px;
     font-family: Arial, Helvetica, sans-serif;
@@ -53,6 +54,7 @@ input[type="text"]{
     width: 100%;
     border-radius: 8px;
     margin-top: 10px;
+    margin-bottom: 10px;
     border: none;
     font-size: 16px;
     cursor: pointer;
@@ -64,7 +66,6 @@ button#addTaskBtn:hover{
 }
 
 button {
-    margin-left: 10px;
     padding: 6px 12px;
     font-size: 14px;
     cursor: pointer;
@@ -82,11 +83,13 @@ button:hover{
 ul#taskList{
     background-color: hsl(0, 0%, 20%);
     margin-top: 10px;
+    margin-left: -10px;
     width: 100%;
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
     list-style-type: none;
+    text-align: center;
 }
 
 li {
@@ -119,6 +122,7 @@ li:hover{
 .animation-container {
     text-align: center;
     margin-bottom: 20px;
+    margin-right: 20px;
 }
 
 .cute-animation {
