--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ input[type="text"]{
     margin-bottom: 10px;
     padding: 10px;
     border: 2px solid #BDC3C7;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 16px;
     color: #2C3E50;
 }
@@ -61,10 +61,6 @@ input[type="text"]{
     transition: background 0.3s ease;
 }
 
-button#addTaskBtn:hover{
-    background-color: #566573;
-}
-
 button {
     padding: 6px 12px;
     font-size: 14px;
@@ -77,10 +73,11 @@ button {
 }
 
 button:hover{
-    background-color: #7D8C8D;
+    background-color: hsl(143, 74%, 53%);
 }
 
 ul#taskList{
+    visibility: hidden;
     background-color: hsl(0, 0%, 20%);
     margin-top: 10px;
     margin-left: -10px;
@@ -94,6 +91,7 @@ ul#taskList{
 
 li {
     font-size: 16px;
+    margin-top: 8px;
     margin-bottom: 8px;
     cursor: pointer;
     display: flex;
